--- a/TotalPaymentTransactions/src/TotalPaymentTransactions.css
+++ b/TotalPaymentTransactions/src/TotalPaymentTransactions.css
@@ -2,8 +2,9 @@
     text-align:center;
 }
 .tot-amount-style {
-    color:#3f51b5;
+    color:#0A68EA;
     margin-top:-20px;
+    margin-bottom: 0;
 }
 
 .square-green {
@@ -25,11 +26,7 @@
 }
 
 
-.tot-fraud {
-    /*float: left;*/
-    /*margin-left:10px;*/
 
-}
 
 .t-align {
     text-align:left !important;
@@ -45,6 +42,64 @@
 }
 
 .legend-count{
+    font-size: 16px;
+    color: #455a64;
+}
+
+.legend-fraud-rate{
+    font-size: 12px;
+    color: #5D6E77;
+}
+
+.fraud-rate{
     font-size: 14px;
-    color: #616161;
+    color: #5D6E77;
+}
+
+.click-tip{
+    color: #5D6E77;
+    font-size: 0.8em;
+    text-align: left;
+    margin-left: 20px;
+    margin-top: -20px;
+}
+
+.info-tip{
+    color: #5D6E77;
+    font-size: 0.7em;
+    text-align: left;
+    margin-left: 20px;
+    margin-top: 220px;
+}
+
+.drill-down-close{
+    color: #5D6E77;
+    font-size: 1.7em;
+    top: 2px;
+    right: 6px;
+    position: absolute;
+    font-weight: lighter;
+    cursor: pointer;
+}
+
+.drill-down-sub-title-1{
+    color:#0A68EA;
+    margin-top:-15px;
+}
+
+
+.drill-down-sub-title-2{
+    color: #5D6E77;
+    margin-top:-15px;
+    margin-bottom: 35px;
+}
+
+.ReactTable .rt-tbody .rt-tr-group {
+    font-weight: lighter;
+    font-size: 0.92em;
+}
+
+.ReactTable .rt-thead .rt-tr {
+    font-size: 0.7em;
+    text-align: center !important;
 }
