--- a/AverageTransactionAmount/src/AverageTransactionAmount.css
+++ b/AverageTransactionAmount/src/AverageTransactionAmount.css
@@ -37,3 +37,38 @@
     font-size: 14px;
     color: #616161;
 }
+
+.click-tip{
+    color: #5D6E77;
+    font-size: 0.8em;
+    /*text-align: left;*/
+    /*margin-left: 20px;*/
+    /*margin-top: -20px;*/
+    position: absolute;
+    bottom: 0;
+    left: 20px;
+}
+
+.drill-down-title{
+    margin-bottom: 45px;
+}
+
+.drill-down-close{
+    color: #5D6E77;
+    font-size: 1.7em;
+    top: 2px;
+    right: 6px;
+    position: absolute;
+    font-weight: lighter;
+    cursor: pointer;
+}
+
+.ReactTable .rt-tbody .rt-tr-group {
+    font-weight: lighter;
+    font-size: 0.92em;
+}
+
+.ReactTable .rt-thead .rt-tr {
+    font-size: 0.7em;
+    text-align: center !important;
+}
