--- a/TotalFraudulentTransactions/src/TotalFraudulentTransactions.css
+++ b/TotalFraudulentTransactions/src/TotalFraudulentTransactions.css
@@ -2,7 +2,7 @@
     text-align:center;
 }
 .fraud-amount-style {
-    color:#3f51b5;
+    color:#0A68EA;
     margin-top:-20px;
 }
 
@@ -28,6 +28,7 @@
 .tot-fraud {
     /*float: left;*/
     /*margin-left:10px;*/
+    margin-top: 20px;
 
 }
 
@@ -47,4 +48,30 @@
 .legend-count{
     font-size: 14px;
     color: #616161;
+}
+
+.legend-percent-from-total{
+    font-size: 12px;
+    color: #5D6E77;
+}
+
+.click-tip{
+    color: #5D6E77;
+    font-size: 0.8em;
+    /*text-align: left;*/
+    /*margin-left: 20px;*/
+    /*margin-top: -20px;*/
+    position: absolute;
+    bottom: 0;
+    left: 20px;
+}
+
+.drill-down-close{
+    color: #5D6E77;
+    font-size: 1.7em;
+    top: 2px;
+    right: 6px;
+    position: absolute;
+    font-weight: lighter;
+    cursor: pointer;
 }
