--- a/AverageTransactionAmount/src/AverageTransactionAmount.css
+++ b/AverageTransactionAmount/src/AverageTransactionAmount.css
@@ -45,7 +45,7 @@
     /*margin-left: 20px;*/
     /*margin-top: -20px;*/
     position: absolute;
-    bottom: 0;
+    bottom: -4px;
     left: 20px;
 }
 
