--- a/TotalFraudulentTransactions/src/TotalFraudulentTransactions.css
+++ b/TotalFraudulentTransactions/src/TotalFraudulentTransactions.css
@@ -62,7 +62,7 @@
     /*margin-left: 20px;*/
     /*margin-top: -20px;*/
     position: absolute;
-    bottom: 0;
+    bottom: -4px;
     left: 20px;
 }
 
