--- a/TotalPaymentTransactions/src/TotalPaymentTransactions.css
+++ b/TotalPaymentTransactions/src/TotalPaymentTransactions.css
@@ -63,7 +63,7 @@
     /*margin-left: 20px;*/
     /*margin-top: -20px;*/
     position: absolute;
-    bottom: 0;
+    bottom: -4px;
     left: 20px;
 }
 
@@ -94,7 +94,7 @@
 .drill-down-sub-title-2{
     color: #5D6E77;
     margin-top:-15px;
-    margin-bottom: 35px;
+    margin-bottom: -5px;
 }
 
 .ReactTable .rt-tbody .rt-tr-group {
