--- a/AverageTransactionAmount/src/AverageTransactionAmount.css
+++ b/AverageTransactionAmount/src/AverageTransactionAmount.css
@@ -17,8 +17,8 @@
  *
  */
 
-.div-style  {
-    text-align:center;
+.main-container {
+    text-align: center;
 }
 
 .square-green {
@@ -26,7 +26,7 @@
     width: 15px;
     height: 15px;
     margin: 3px;
-    border: 0px;
+    border: 0;
     background: #00FF85;
 }
 
@@ -35,44 +35,41 @@
     width: 15px;
     height: 15px;
     margin: 3px;
-    border: 0px;
+    border: 0;
     background: #0085FF;
 }
 
 .t-align {
-    text-align:left !important;
+    text-align: left !important;
 }
 
-.legend-name{
+.legend-name {
     font-size: 16px;
 }
 
-.legend-amount{
+.legend-amount {
     font-size: 18px;
     font-weight: bold;
 }
 
-.legend-count{
+.legend-count {
     font-size: 14px;
     color: #616161;
 }
 
-.click-tip{
+.click-tip {
     color: #5D6E77;
     font-size: 0.8em;
-    /*text-align: left;*/
-    /*margin-left: 20px;*/
-    /*margin-top: -20px;*/
     position: absolute;
     bottom: -4px;
     left: 20px;
 }
 
-.drill-down-title{
+.drill-down-title {
     margin-bottom: 45px;
 }
 
-.drill-down-close{
+.drill-down-close {
     color: #5D6E77;
     font-size: 1.7em;
     top: 2px;
@@ -92,6 +89,6 @@
     text-align: center !important;
 }
 
-.pointer g path:nth-child(2){
+.pointer g path:nth-child(2) {
     cursor: pointer;
 }
